// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/preuves/AddPreuveModal/AddFromLib Fichiers 1`] = `
Array [
  <h6
    className="fr-text--md"
  >
    Tous les fichiers de ma collectivité
  </h6>,
  <div>
    <div
      className="border border-bf500 rounded-tr rounded-tl"
    >
      <div
        className="flex items-center w-full border-b-2 border-bf500"
      >
        <input
          className="bg-beige p-2 w-full placeholder-gray-500"
          onChange={[Function]}
          placeholder="Rechercher par nom"
          type="search"
          value=""
        />
        <div
          className="bg-bf500 h-full p-2"
        >
          <div
            className="fr-fi-search-line text-white"
          />
        </div>
      </div>
    </div>
    <p
      className="fr-mt-2w"
    >
      Sélectionner les fichiers à ajouter
    </p>
    <fieldset
      className="fr-fieldset"
      onChange={[Function]}
    >
      <div
        className="overflow-auto"
        style={
          Object {
            "height": "12rem",
          }
        }
      >
        <div
          className="fr-fieldset__element"
        >
          <div
            className="fr-checkbox-group"
          >
            <input
              id="1"
              name="exemple 1"
              type="checkbox"
            />
            <label
              className="fr-label"
              htmlFor="1"
            >
              exemple 1
            </label>
          </div>
        </div>
        <div
          className="fr-fieldset__element"
        >
          <div
            className="fr-checkbox-group"
          >
            <input
              id="2"
              name="exemple 2"
              type="checkbox"
            />
            <label
              className="fr-label"
              htmlFor="2"
            >
              exemple 2
            </label>
          </div>
        </div>
        <div
          className="fr-fieldset__element"
        >
          <div
            className="fr-checkbox-group"
          >
            <input
              id="3"
              name="exemple 3"
              type="checkbox"
            />
            <label
              className="fr-label"
              htmlFor="3"
            >
              exemple 3
            </label>
          </div>
        </div>
        <div
          className="fr-fieldset__element"
        >
          <div
            className="fr-checkbox-group"
          >
            <input
              id="4"
              name="exemple 4"
              type="checkbox"
            />
            <label
              className="fr-label"
              htmlFor="4"
            >
              exemple 4
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <nav
      className="flex w-fit gap-6 mx-auto"
    >
      <button
        className="w-fit flex items-center border-solid group gap-1 cursor-not-allowed rounded-lg border font-bold !text-primary-3 !bg-primary-0 !border-primary-4 text-xs py-2 px-5"
        disabled={true}
        onClick={[Function]}
        title="Page précédente"
      >
        <span
          className="ri-arrow-left-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] fill-primary-3"
        />
        Précédent
      </button>
      <div
        className="flex gap-3"
      >
        <button
          aria-current="page"
          className="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !p-2 !w-9 justify-center"
          disabled={false}
          onClick={[Function]}
          title="Page 1"
        >
          1
        </button>
        <button
          aria-current="page"
          className="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !p-2 !w-9 justify-center"
          disabled={false}
          onClick={[Function]}
          title="Page 2"
        >
          2
        </button>
        <button
          aria-current="page"
          className="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !p-2 !w-9 justify-center"
          disabled={false}
          onClick={[Function]}
          title="Page 3"
        >
          3
        </button>
      </div>
      <button
        className="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 flex-row-reverse"
        disabled={false}
        onClick={[Function]}
        title="Page suivante"
      >
        <span
          className="ri-arrow-right-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] fill-primary-7 group-hover:fill-primary-8"
        />
        Suivant
      </button>
    </nav>
  </div>,
  <button
    className="fr-btn mt-2"
    disabled={true}
    onClick={[Function]}
  >
    Ajouter
  </button>,
]
`;

exports[`Storyshots ui/shared/preuves/AddPreuveModal/AddFromLib Vide 1`] = `
Array [
  <h6
    className="fr-text--md"
  >
    Tous les fichiers de ma collectivité
  </h6>,
  <div>
    <div
      className="border border-bf500 rounded-tr rounded-tl"
    >
      <div
        className="flex items-center w-full border-b-2 border-bf500"
      >
        <input
          className="bg-beige p-2 w-full placeholder-gray-500"
          onChange={[Function]}
          placeholder="Rechercher par nom"
          type="search"
          value=""
        />
        <div
          className="bg-bf500 h-full p-2"
        >
          <div
            className="fr-fi-search-line text-white"
          />
        </div>
      </div>
    </div>
  </div>,
  <p
    className="fr-mt-2w"
  >
    Aucun fichier
  </p>,
  <button
    className="fr-btn mt-2"
    disabled={true}
    onClick={[Function]}
  >
    Ajouter
  </button>,
]
`;
